--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    
             </div>
             <div >
-                <img class="intro_img" src="C:\Users\DELL\Documents\fyle\img\hero.png" alt="">
+                <img class="intro_img" src="/img/hero.png" alt="">
             </div>    
         </div>
     </div>
